[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camscan"
version = "0.1.0"
description = "Hidden-camera scanner — WiFi + Bluetooth detection of camera-vendor devices on networks you have authorization to scan."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "camscan contributors" }]
keywords = ["security", "privacy", "hidden-camera", "wifi", "bluetooth", "kali"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.15,<1",
    "rich>=13.7,<14",
    "bleak>=0.22,<0.23",
    "manuf>=1.1.5,<2",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
camscan = "camscan.cli:app"

[project.urls]
Homepage = "https://github.com/example/camscan"
Issues = "https://github.com/example/camscan/issues"

[tool.setuptools.packages.find]
include = ["camscan*"]

[tool.setuptools.package-data]
camscan = ["data/*.json", "data/*.md", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic pattern uses typer.Option(...) as a default argument.
"camscan/cli.py" = ["B008"]
